--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <meta name="google-signin-client_id" content="51340476744-sv36d9h3ucin0a1q2li7teu2qdpq6uh4.apps.googleusercontent.com">
 </head>
 <body>
+  <!-- <img src="http://localhost:3000/imagen/productos/5faeaa2228fda90e617482df-706.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkYXRhIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwic3RhdGUiOnRydWUsImdvb2dsZSI6ZmFsc2UsIl9pZCI6IjVmYjFhMjc5YTc2ZTUwMzA4M2Q0MjYyMSIsIm5hbWUiOiJ0ZXN0MSIsImVtYWlsIjoidGVzdDFAZ21haWwuY29tIiwidGVsIjoiMzEyMzQ1Njg2OSIsIl9fdiI6MH0sImlhdCI6MTYwNTgyODI5MCwiZXhwIjoxNjA4NDIwMjkwfQ.pdMgg-YB0xoVoiGibRGQisFlGzYoIiEfa9i8vXTrOxo" alt=""> -->
+
   <div class="g-signin2" data-onsuccess="onSignIn"></div>
   <a href="#" onclick="signOut();">Sign out</a>
   <script>
